# amtrak-schedule-fixer

./: .gitignore  Cargo.toml  README.md  bruh.js  example.json
.github/workflows/: schedule.yml  update.yml
src/: main.rs  routes_list.rs
