[package]
name = "amtrak-schedule-fixer"
version = "0.1.0"
edition = "2024"

[dependencies]
bytesize = "2.1.0"
chrono = "0.4.42"
chrono-tz = "0.10.4"
csv = "1.3.1"
gtfs-structures = "0.45.1"
reqwest = "0.12.23"
rgb = "0.8.52"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
zip = "2.2"
zip-extract = "0.2.1"
